Archive2/68/71ea8e498aafdf/output
main.cpp: In function 'void func2(const std::vector<int>&)':
main.cpp:16:7: error: assignment of read-only reference 'i'
     i = 0;
       ^
